--- a/admin.master
+++ b/admin.master
@@ -89,10 +89,11 @@
                     <div class="menu_body">
                         <a href="../sinav.aspx"><i class="fa fa-plus"></i>Sınav Oluştur</a>
                     </div>
+                    <asp:Panel ID="Panel3" runat="server">
                     <p class="menu_head"><i class="fa fa-pencil"></i>Bilgisayar Erişim İzin Yöneticisi</p>
                     <div class="menu_body">
                         <a href="../erisimizinEkle.aspx"><i class="fa fa-plus"></i>Erişim İzin Kayıtı Ekle</a>
-                    </div>
+                    </div></asp:Panel>
 
 
 
