--- a/admin.master
+++ b/admin.master
@@ -93,6 +93,7 @@
                     <p class="menu_head"><i class="fa fa-pencil"></i>Bilgisayar Erişim İzin Yöneticisi</p>
                     <div class="menu_body">
                         <a href="../erisimizinEkle.aspx"><i class="fa fa-plus"></i>Erişim İzin Kayıtı Ekle</a>
+                        <a href="../ayarlar.aspx"><i class="fa fa-plus"></i>Genel Ayarlar</a>
                     </div></asp:Panel>
 
 
